# feup-dal-proj

./: CMakeLists.txt  Doxyfile  main.cpp
include/: Company.h  Delivery.h  Garage.h  Menu.h  Truck.h  Warehouse.h  constants.h  deliveries.h  trucks.h  utils.h
resources/: encomendas_deliveries.txt  encomendas_trucks.txt
src/: Company.cpp  Delivery.cpp  Garage.cpp  Menu.cpp  Truck.cpp  Warehouse.cpp  deliveries.cpp  trucks.cpp  utils.cpp
